Fix CSS bug where search bar overlaps modal
The Z-index for typeaheads was set WAY higher than anything else,
including modal dialogs. This was especially visible in LanguageForge
projects where the search box for words was overlapping the "Do you want
to delete this word" modal dialog.

--- a/src/angular-app/bellows/css/palaso-ui.css
+++ b/src/angular-app/bellows/css/palaso-ui.css
@@ -1,7 +1,7 @@
 
 /* Typeahead */
 div.typeahead {
-	z-index: 1051;
+	z-index: 51;
 	margin-top: 0px;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
